--- a/libs/components/src/stories/introduction.mdx
+++ b/libs/components/src/stories/introduction.mdx
@@ -104,7 +104,7 @@ component library and the other clients will follow once this work is completed.
     className="link-item"
     href="https://storybook.js.org/docs/react/get-started/setup#configure-storybook-for-your-stack"
     target="_blank"
-    rel="noopener noreferrer"
+    rel="noreferrer"
   >
     <span>
       <strong>Data</strong>
@@ -116,12 +116,7 @@ component library and the other clients will follow once this work is completed.
 <div className="subheading">Learn</div>
 
 <div className="link-list">
-  <a
-    className="link-item"
-    href="https://storybook.js.org/docs"
-    target="_blank"
-    rel="noopener noreferrer"
-  >
+  <a className="link-item" href="https://storybook.js.org/docs" target="_blank" rel="noreferrer">
     <span>
       <strong>Storybook documentation</strong>
       Configure, customize, and extend
@@ -131,7 +126,7 @@ component library and the other clients will follow once this work is completed.
     className="link-item"
     href="https://storybook.js.org/tutorials/"
     target="_blank"
-    rel="noopener noreferrer"
+    rel="noreferrer"
   >
     <span>
       <strong>In-depth guides</strong>
