--- a/libs/components/src/stories/kitchen-sink/kitchen-sink.mdx
+++ b/libs/components/src/stories/kitchen-sink/kitchen-sink.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Primary } from "@storybook/addon-docs";
+import { Meta, Story } from "@storybook/addon-docs";
 
 import * as stories from "./kitchen-sink.stories";
 
@@ -6,8 +6,10 @@ import * as stories from "./kitchen-sink.stories";
 
 # Kitchen Sink
 
-NOTE: Best viewed in either Light or Dark mode (not both at the same time).
-
 The purpose of this story is to compose together all of our components. When snapshot tests run,
 we'll be able to spot-check visual changes in a more app-like environment than just the isolated
 stories. The stories for the Kitchen Sink exist to be tested by the Chromatic UI tests.
+
+NOTE: These stories will treat "Light & Dark" mode as "Light" mode. This is done to avoid a bug with
+the way that we render the same component twice in the same iframe and how that interacts with the
+`router-outlet`.
